<resources>
    <string name="app_name">SmartPillbox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_name">Name</string>
    <string name="nav_type">Patient</string>

    <string name="nav_home">Home</string>
    <string name="nav_treatment">Treatment</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_patient">My Patients</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm </string>
    <string name="action_register">Register</string>
    <string name="action_register_sign_in">Register and sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (5 mini)</string>
    <string name="error_invalid_new_password">New passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_treatment">TreatmentActivity</string>

    <string name="name">Name</string>
    <string name="error_invalid_name_format">This name is invalid: too long</string>
    <string name="birth">Birthday</string>
    <string name="birth_format">YYYY-MM-DD</string>
    <string name="error_invalid_birth_format">This birth is invalid: YYYY-MM-DD</string>
    <string name="height">Height (cm)</string>
    <string name="error_invalid_height_format">This height is invalid: digit only</string>
    <string name="weight">Weight (kg)</string>
    <string name="error_invalid_weight_format">This weight is invalid: digit only</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="error_invalid_phone_format">This phone number is invalid: digit only</string>
    <string name="ref_doctor">Referring doctor</string>
    <string name="ref_pharmacist">Referring pharmacist</string>
    <string name="contact">Contact</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_treatment">Add Treatment</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="relationship">Relationship</string>
    <string name="notify">Notify</string>
    <string name="add">Add</string>

    <string name="medical_staff">Medical Staff</string>
    <string name="rights">Rights to change information</string>

    <string name="notifications">Notifications</string>
    <string-array name="notification_mode_arrays">
        <item>None</item>
        <item>SMS</item>
        <item>Mail</item>
        <item>SMS + Mail</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient">Patient</string>
    <string name="add_new_patient">Add new patient</string>

    <string name="current_medicine">Current Medicine :</string>

</resources>
