<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />

        <!--group
            android:id="@+id/menu_id"
            android:checkableBehavior="single">
        </group-->
            <item
                android:id="@+id/nav_patient"
                android:icon="@drawable/ic_menu_patient"
                android:title="@string/nav_patient"
                android:visible="false"/>

        <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/ic_menu_treatment"
            android:title="@string/nav_treatment" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout" />
</menu>

