<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ece.ing4.ppe.smartpillbox.smartpillbox.SettingsActivity"
    tools:showIn="@layout/app_bar_settings">


    <ScrollView android:id="@+id/ScrollViewIDSettings"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:columnCount="3">

            <TextView
                android:text="@string/prompt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textCurrentPassword"
                android:layout_columnSpan="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:ems="10"
                android:id="@+id/editCurrentPassword"
                android:layout_columnSpan="2"/>

            <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_password"
                android:layout_columnSpan="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:ems="10"
                android:id="@+id/editNewPassword"
                android:layout_columnSpan="2"/>

            <TextView
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textBirth"
                android:layout_columnSpan="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm"
                android:ems="10"
                android:id="@+id/editConfirmNewPassword"
                android:layout_columnSpan="2"/>

        <TextView
            android:id="@+id/textNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:layout_columnSpan="3" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/spinnerNotification"
            android:entries="@array/notification_mode_arrays"
            android:layout_columnSpan="3"/>

        <Switch
            android:text="@string/medical_staff"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/switchMedicalStaff"
            android:layout_columnSpan="3" />

        <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textContact"
            android:layout_weight="1"
            android:layout_columnSpan="1" />
        <Button
            android:id="@+id/buttonAddNewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/add"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/buttonDeleteContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/delete"
            android:layout_gravity="end"/>

        <include
            android:id="@+id/contactAddLayout"
            layout="@layout/add_contact_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_rowSpan="3"
            android:visibility="gone" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/spinnerContact"
            android:layout_columnSpan="3" />

            <Button
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSaveUserSettings"
                android:layout_columnSpan="3" />
        </GridLayout>

    </ScrollView>
</RelativeLayout>
