<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:columnCount="3"
    android:rowCount="3"
    android:id="@+id/add_patient_grid">


    <TextView
        android:id="@+id/contactAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_rowSpan="3"
        android:layout_weight="1"
        android:paddingTop="@dimen/activity_patient_vertical_margin"
        android:paddingBottom="@dimen/activity_patient_vertical_margin"
        android:paddingRight="@dimen/activity_contact_horizontal_margin"
        android:text="@string/patient" />

    <TextView
        android:id="@+id/textPatientMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:text="@string/mail" />

    <EditText
        android:id="@+id/editPatientMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textPatientPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/editPatientPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <Button
        android:text="@string/add_new_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSaveNewPatient"
        android:layout_marginLeft="@dimen/activity_contact_vertical_margin"
        android:layout_weight="1"
        android:layout_columnSpan="2"/>

</GridLayout>