<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_treatment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ece.ing4.ppe.smartpillbox.smartpillbox.TreatmentActivity"
    tools:showIn="@layout/app_bar_treatment">

    <ScrollView android:id="@+id/ScrollViewID"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/spinnerTreatment"
                android:prompt="@string/mail"
                android:layout_columnSpan="3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/spinnerMedicine"
                android:prompt="@string/mail"
                android:layout_columnSpan="3" />

            <Button
                android:id="@+id/butonAddNewTreatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:onClick="add_treatment"
                android:text="@string/add_treatment" />

            <Button
                android:id="@+id/buttonAddNewMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:onClick="add_medicine"
                android:text="@string/add_medicine" />

            <include
                android:id="@+id/medicineAddLayout"
                layout="@layout/add_medicine_treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:layout_rowSpan="3"
                android:visibility="visible" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/spinnerContact"
                android:prompt="@string/mail"
                android:layout_columnSpan="3" />

            <Button
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSaveNewTreatment"
                android:onClick="saveTreatment"
                android:layout_columnSpan="3"/>
        </GridLayout>
    </ScrollView>
</RelativeLayout>
